<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.settings.SettingsFragment"
    android:id="@+id/settings_layout"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/email_subject"
            android:text="@string/email_subject_label" />

        <EditText
            android:id="@+id/email_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/bedtime_subject"
            android:text="@string/bedtime_subject_label" />

        <TimePicker
            android:id="@+id/bedtime_subject"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:timePickerMode="spinner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="209dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/checkbox_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/checkbox_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/checkbox_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/thursday" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/checkbox_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/saturday" />

                <CheckBox
                    android:id="@+id/checkbox_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/sunday" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Save changes" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>