<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.zzzleep.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/navigation_goodmorning"
        android:name="com.example.zzzleep.ui.goodmorning.GoodMorningFragment"
        android:label=""
        tools:layout="@layout/good_morning_fragment" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.zzzleep.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard"

        >
        <action android:id="@+id/action_timer"
            app:destination="@+id/navigation_goodmorning">
    </action>
        <action
            android:id="@+id/action_navigation_dashboard_self"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.zzzleep.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>